[package]
name = "krakatau2"
version = "2.0.0-alpha"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.4.3"
zip = { git = "https://github.com/Storyyeller/zip.git", default-features = false, features=["deflate"] }
hexf-parse = "0.2.1"
typed-arena = "2.0.1"
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]


[profile.release]
opt-level = 1      # Lower optimization to reduce complexity
lto = false        # Disable LTO for better debugging
codegen-units = 1  # Reduce number of codegen units to increase optimizations
panic = "unwind"   # Use unwind instead of abort for better error handling
# strip = true     # Don't strip symbols for debugging



[[bin]]
name = "test_decompile"
path = "src/bin/test_decompile.rs"

[[bin]]
name = "test_assemble"
path = "src/bin/test_assemble.rs"

[[bin]]
name = "ass_main"
path = "src/ass_main.rs"

[[bin]]
name = "dis_main"
path = "src/dis_main.rs"
